Closed Bug 153508 Opened 22 years ago Closed 22 years ago

"Copy" and "Select All" don't show up in context menu in content window

Categories

(Camino Graveyard :: Toolbars & Menus, defect)

PowerPC
macOS
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: winnie, Assigned: sfraser_bugs)

References

Details

(Keywords: helpwanted)

"Copy" and "Paste" don't show up in context menu in content window, with the
exception of being inside text boxes.

This is a spinoff bug from bug 151662.  
OS 10.1.5
06-21 build

1.  Select text in content window that's not in a textbox, e.g. "This is
Bugzilla: the Mozilla bug system." at the top of this page.
2.  Right click on the selected text.

Expected results:  Copy and Paste appear as options in the context menu

Actual results:  Context menu contains Back, Forward, Reload, Save Page As,
Bookmark this Page, View Page Source.
  
I tried highlighting "This is Bugzilla: the Mozilla bug system." on this page in
Netscape 7.0, and I am able to right click "Copy" and "Paste" the sentence
elsewhere.
clarifying summary (you can't paste into a browser window; only copy)

This can probably wait for a month or more if need be.
Status: NEW → ASSIGNED
Keywords: helpwanted
Summary: "Copy" and "Paste" don't show up in context menu in content window → "Copy" and "Select All" don't show up in context menu in content window
Blocks: 154286
->menu
Status: ASSIGNED → NEW
Component: General → Toolbars & Menus
QA Contact: winnie → sairuh
What mozilla and IE do is to add Copy if there is a selection. Select All should
be enabled all the time, I guess.

Taking.
Assignee: brade → sfraser
Copy and Select All have been added.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
vrfy'd fixed on 10.2.1 with 2002.11.07.04, with the caveat that everything in
the edit context menu item is always enabled for textfields. filed bug 179009
for command updating there.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.