Fixing bug 153508: adding Copy and Select All to the page context menu.